--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<iframe src="https://forkphorus.github.io/embed.html?id=119630692&auto-start=true&light-content=false" width="482" height="393" allowfullscreen="true" allowtransparency="true" style="border:none;"></iframe>
+<iframe src="https://scratch.mit.edu/projects/119630692/embed" width="482" height="393" allowfullscreen="true" allowtransparency="true" style="border:none;"></iframe>
 </body>
 </html>
